// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`JSON envelope structure snapshots status --json success envelope shape 1`] = `
{
  "accountFiles": "array(0)",
  "aspHost": "null",
  "configDir": "null",
  "configExists": "boolean",
  "defaultChain": "null",
  "entrypoint": "null",
  "mnemonicSet": "boolean",
  "readyForDeposit": "boolean",
  "readyForUnsigned": "boolean",
  "readyForWithdraw": "boolean",
  "rpcIsCustom": "boolean",
  "rpcUrl": "null",
  "schemaVersion": "string",
  "selectedChain": "null",
  "signerAddress": "null",
  "signerKeySet": "boolean",
  "signerKeyValid": "boolean",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots status --json (initialized) success envelope shape 1`] = `
{
  "accountFiles": "array(0)",
  "aspHost": "string",
  "aspLive": "boolean",
  "configDir": "string",
  "configExists": "boolean",
  "defaultChain": "string",
  "entrypoint": "string",
  "mnemonicSet": "boolean",
  "readyForDeposit": "boolean",
  "readyForUnsigned": "boolean",
  "readyForWithdraw": "boolean",
  "rpcIsCustom": "boolean",
  "rpcLive": "boolean",
  "rpcUrl": "string",
  "schemaVersion": "string",
  "selectedChain": "string",
  "signerAddress": "string",
  "signerKeySet": "boolean",
  "signerKeyValid": "boolean",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots capabilities --json success envelope shape 1`] = `
{
  "agentNotes.firstRun": "string",
  "agentNotes.metaFlag": "string",
  "agentNotes.polling": "string",
  "agentNotes.statusCheck": "string",
  "agentNotes.unsignedMode": "string",
  "agentNotes.withdrawQuote": "string",
  "agentWorkflow": "array(5)",
  "commands": "array(15)",
  "globalFlags": "array(11)",
  "jsonOutputContract": "string",
  "schemaVersion": "string",
  "schemas.aspApprovalStatus.description": "string",
  "schemas.aspApprovalStatus.values": "array(3)",
  "schemas.errorCategories.description": "string",
  "schemas.errorCategories.exitCodes.ASP": "number",
  "schemas.errorCategories.exitCodes.CONTRACT": "number",
  "schemas.errorCategories.exitCodes.INPUT": "number",
  "schemas.errorCategories.exitCodes.PROOF": "number",
  "schemas.errorCategories.exitCodes.RELAYER": "number",
  "schemas.errorCategories.exitCodes.RPC": "number",
  "schemas.errorCategories.exitCodes.UNKNOWN": "number",
  "schemas.errorCategories.values": "array(7)",
  "schemas.poolAccountStatus.description": "string",
  "schemas.poolAccountStatus.values": "array(3)",
  "schemas.unsignedOutput.envelopeFormat": "string",
  "schemas.unsignedOutput.note": "string",
  "schemas.unsignedOutput.txFormat": "string",
  "success": "boolean",
  "supportedChains": "array(5)",
}
`;

exports[`JSON envelope structure snapshots activity --json error envelope shape (ASP offline) 1`] = `
{
  "error.category": "string",
  "error.code": "string",
  "error.hint": "string",
  "error.message": "string",
  "error.retryable": "boolean",
  "errorCode": "string",
  "errorMessage": "string",
  "schemaVersion": "string",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots stats --json error envelope shape (ASP offline) 1`] = `
{
  "error.category": "string",
  "error.code": "string",
  "error.hint": "string",
  "error.message": "string",
  "error.retryable": "boolean",
  "errorCode": "string",
  "errorMessage": "string",
  "schemaVersion": "string",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots pools --json error envelope shape (ASP offline) 1`] = `
{
  "error.category": "string",
  "error.code": "string",
  "error.hint": "string",
  "error.message": "string",
  "error.retryable": "boolean",
  "errorCode": "string",
  "errorMessage": "string",
  "schemaVersion": "string",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots INPUT error envelope shape (stats pool without --asset) 1`] = `
{
  "error.category": "string",
  "error.code": "string",
  "error.hint": "string",
  "error.message": "string",
  "error.retryable": "boolean",
  "errorCode": "string",
  "errorMessage": "string",
  "schemaVersion": "string",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots accounts --json envelope shape (initialized, offline) 1`] = `
{
  "error.category": "string",
  "error.code": "string",
  "error.hint": "string",
  "error.message": "string",
  "error.retryable": "boolean",
  "errorCode": "string",
  "errorMessage": "string",
  "schemaVersion": "string",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots history --json envelope shape (initialized, offline) 1`] = `
{
  "error.category": "string",
  "error.code": "string",
  "error.hint": "string",
  "error.message": "string",
  "error.retryable": "boolean",
  "errorCode": "string",
  "errorMessage": "string",
  "schemaVersion": "string",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots init --json success envelope shape 1`] = `
{
  "defaultChain": "string",
  "schemaVersion": "string",
  "signerKeySet": "boolean",
  "success": "boolean",
}
`;
